// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link> renders 1`] = `
<Text
  accessibilityRole="link"
  href="http://minube.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
/>
`;

exports[`<Link> when {style} 1`] = `
<Text
  accessibilityRole="link"
  href="http://minube.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {
        "fontSize": 20,
        "fontWeight": "700",
      },
    ]
  }
  visible={true}
/>
`;

exports[`<Link> when {styleHover} 1`] = `
<Text
  accessibilityRole="link"
  href="http://minube.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Array [
      Object {
        "color": "#4a4a4a",
        "textAlignVertical": "center",
      },
      undefined,
      false,
      Object {},
    ]
  }
  styleHover={
    Object {
      "fontSize": 20,
      "fontWeight": "700",
    }
  }
  visible={true}
/>
`;
